# house-tracking

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  realEstate.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
src/real_estate_tracker/: __init__.py
tests/: conftest.py
tests/integration/: test_example_integration.py
tests/unit/: test_example.py
